--- a/ceart-cms/package.json
+++ b/ceart-cms/package.json
@@ -26,8 +26,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.4-lts.1",
     "sqlite3": "^5.1.7"
